<resources>
    <string name="app_name">NextGen</string>
    <string name="group">New Group</string>
    <string name="broadcast">New Broadcast</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="web">Web</string>
    <string name="privacy">Privacy</string>
    <string name="about_help">About and Help</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="draw_open">Open Navigation</string>
    <string name="draw_close">Close Navigation</string>
    <string name="title_activity_tab">tab</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <string name="chats">Chats</string>
    <string name="Groups">Groups</string>
    <string name="calls">Calls</string>
    <string name="typing">Enter your content..</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="email_chat">Email Chat</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="block">Block</string>

    <string name="video_call">Video</string>
    <string name="audio_call">Audio</string>
    <string name="back">back</string>
    <string name="today">Today</string>
    <string name="background">Background</string>
    <string name="username">Username</string>
    <string name="status">Status</string>
</resources>
